--- a/abc_comprehensivecba_jeffreysmithcomments.tex
+++ b/abc_comprehensivecba_jeffreysmithcomments.tex
@@ -21,13 +21,15 @@
 \begin{document}
 \doublespacing
 
+\noindent \textbf{Jeffrey Smith's Comments - 12/03/2016}
+
 \begin{enumerate}
 
 \item 
 
 \noindent \textbf{Comment.} The text and notation suggest that the participants represent a random subsample of the population of those eligible and willing to participate. How does this fit in with the referral mechanism mentioned on page 6? Do impacts on families that get referred by providers generalize to all eligible families willing to participate in the program? \\
 
-\noindent \textbf{Answer.}\\
+\noindent \textbf{Answer.} I have added the following to assess his comment. We further argue in favor of the validity of this interpretation as follows. All providers of health care and social services (referral agencies) in the area of the ABC/CARE implementation were informed of the programs. They referred mothers who they considered disadvantaged. Eligibility was corroborated before randomization. Our conversations with the program implementers indicate that the encouragement from the referral agencies was such that most referred mothers attended and agreed to initial randomization (Ramey et al., 2012). I believe this is the most we can say with respect to the issue. This is in footnote 33.\\
 
 \item
 \noindent \textbf{Comment.} I understand that the samples are of necessity rather small. At the same time, I think there would be substantive and rhetorical value to making the default (in the broader literature) choices in regard to statistical testing, the discount rate, and so on, and then describing how inferences and results change when these choices are changed. More specifically, I would have a five percent significance level and two-sided tests as the base case, with the current regime of 10 percent significance and one-sided tests as a second analysis motivated by the small sample sizes and, in the case of the one-sided tests, by an explicitly justified prior that negative impacts are very unlikely. An alternative, less drastic change would simply indicate, perhaps in a couple of footnotes, which estimates remain statistically significant when subject to a two-sided test at the five percent significance level.\\
