--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -19,8 +19,8 @@ Discount 	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	&	\textit{
 Rate	&	\textbf{16.49}	&	\textbf{2.67}	&	\textbf{29.66}	&	4.10	&	\textbf{5.77}	&	\textbf{1.66}	\\
 	&	(6.97)	&	(0.76)	&	(18.12)	&	(2.07)	&	(3.55)	&	(0.41)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	\textbf{6.52}	&	\textbf{6.71}	&	\textbf{11.29}	&	\textbf{11.56}	&	\textbf{2.73}	&	\textbf{3.00}	\\
-	&	(2.11)	&	(2.20)	&	(6.35)	&	(6.42)	&	(0.84)	&	(0.94)	\\ \midrule
+Labor	&	\textbf{6.52}	&	\textbf{6.71}	&	\textbf{11.29}	&	\textbf{11.56}	&	\textbf{2.73}	&	\textbf{3.00}	\\
+Income	&	(2.11)	&	(2.20)	&	(6.35)	&	(6.42)	&	(0.84)	&	(0.94)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
 Income	&	\textbf{5.93}	&	\textbf{6.64}	&	\textbf{10.39}	&	\textbf{11.81}	&	\textbf{2.38}	&	\textbf{2.53}	\\
 	&	(2.09)	&	(2.15)	&	(6.02)	&	(6.71)	&	(0.76)	&	(0.83)	\\ \midrule
