--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -16,8 +16,8 @@ Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\
 loss	&	\textbf{0.20}	&	\textbf{0.11}	&	\textbf{0.18}	&	\textbf{0.11}	&	0.21	&	\textbf{0.09}	\\
 	&	(0.08)	&	(0.07)	&	(0.08)	&	(0.05)	&	(0.19)	&	(0.10)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	\textbf{0.15}	&	\textbf{0.14}	&	\textbf{0.14}	&	\textbf{0.14}	&	0.14	&	\textbf{0.13}	\\
-	&	(0.06)	&	(0.06)	&	(0.07)	&	(0.06)	&	(0.12)	&	(0.11)	\\ \midrule
+Labor	&	\textbf{0.15}	&	\textbf{0.14}	&	\textbf{0.14}	&	\textbf{0.14}	&	0.14	&	\textbf{0.13}	\\
+Income	&	(0.06)	&	(0.06)	&	(0.07)	&	(0.06)	&	(0.12)	&	(0.11)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
 Income	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.13}	&	0.10	&	0.10	\\
 	&	(0.05)	&	(0.04)	&	(0.06)	&	(0.06)	&	(0.08)	&	(0.08)	\\ \midrule
