--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -6,7 +6,7 @@ Removed Component       &       NPV     &       IRR     &       B/C     &       
 \midrule																			
 None	&	134,240	&	0.10	&	\textbf{2.45}	&	935,640	&	\textbf{0.13}	&	\textbf{11.10}	&	489,010	&	\textbf{0.13}	&	\textbf{6.29}	\\
 	&		&	(0.08)	&	(0.79)	&		&	(0.06)	&	(6.35)	&		&	(0.05)	&	(2.11)	\\ \\
-Parental Income	&	101,786	&	0.04	&	1.34	&	68,314	&	\textbf{0.11}	&	10.36	&	84,830	&	\textbf{0.09}	&	\textbf{5.36}	\\
+Parental Labor Income	&	101,786	&	0.04	&	1.34	&	68,314	&	\textbf{0.11}	&	10.36	&	84,830	&	\textbf{0.09}	&	\textbf{5.36}	\\
 	&		&	(0.02)	&	(0.69)	&		&	(0.05)	&	(6.36)	&		&	(0.03)	&	(2.11)	\\
 Subject Labor Income	&	48,007	&	0.10	&	\textbf{2.16}	&	258,034	&	\textbf{0.12}	&	8.22	&	128,226	&	\textbf{0.11}	&	\textbf{4.86}	\\
 	&		&	(0.08)	&	(0.70)	&		&	(0.06)	&	(5.35)	&		&	(0.06)	&	(2.18)	\\
