--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -194,7 +194,7 @@ outcomes in a current year. \\
 \scriptsize
 \input{AppOutput/Methodology/transitiontable}
 {\flushleft\footnotesize
-Note: This table illustrates how health outcomes at age $a$ predict health outcomes at age $a+1$. The crosses indicate if we use the age $a$ outcome to predict the age $a+1$ outcome. DI Claim: disability insurance claim; SS Claim: social security claim; DB Claim: disability benefits claim; SSI Claim: supplemental security income claim. The age $a$ states that do not predict themselves at age $a+1$ are absorbing states by construction.}
+Note: This table illustrates how health outcomes at age a predict health outcomes at age $a + 1$. The crosses indicate if we use the age a outcome to predict the age $a + 1$ outcome. DI Claim: claims of benefits to individuals and their families if ``insured"---i.e., worked long enough and paid Social Security taxes; SS claim: claim of social security retirement benefits; SSI Claim: claims of stipends for low-income people who are older than 65 years old, blind, or disabled.}
 \end{threeparttable}
 \end{sidewaystable}
 
