--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -6,7 +6,8 @@
 \hspace{.6cm} Treatment & & & \\
 \hspace{.5cm} Second-phase & 5 to 8 years old & 5 to 8 years old &\checkmark \\
 \hspace{.6cm} Treatment & & & \\
-\hspace{.5cm} Recruited Sample &122&67\\
+\hspace{.5cm} Initially Recruited & 121$^*$ & 67\\
+\hspace{.6cm} Sample & & &\\
 \hspace{.5cm} \# of Cohorts &4&2\\
 \midrule
 \textbf{Eligibility} & Socio-economic disadvantage according to a multi-factor index (see Appendix \ref{appendix:background})&Socio-economic disadvantage according to a multi-factor index (see Appendix \ref{appendix:background}) & \checkmark\\
